@@ -1,5 +1,11 @@
 2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
+	* src/SDCCralloc.hpp,
+	  src/z80/ralloc2.cc:
+	  Preparations for tree-decomposition-based spilllocation allocation.
+	  
+2011-08-30 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
 	* Merge from trunk.
 
 2011-08-27 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
